district name wrap size fix
using em instead of rem prevents arbitrary height changes

--- a/src/style/candidate.scss
+++ b/src/style/candidate.scss
@@ -26,7 +26,7 @@ div.candidate {
       color: white;
       font-weight: bold;
       font-size: 20px;
-      height: 3rem;
+      height: 1.5em;
       text-align: center;
     }
   }
